[package]
name = "wordle-bot"
version = "0.2.0"
edition = "2021"
description = "Full CLI Implementation of the popular game Wordle with an included Solver"
repository = "https://github.com/HardBoss07/wordle-bot"
license = "AGPL-3.0-only"
keywords = ["worlde", "solver", "game", "puzzle"]
categories = ["command-line-utilities", "games"]
readme = "README.md"

include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE*",
    "*.txt",
    "*.json"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.11"
rand = "0.9.2"
